tests/paczka1/fuzzy1/95210473.err
Error in line 5: A122 A954 82,1
Error in line 7: A122 A122 49,1
Error in line 11: 1Sjqw3lHI S111 76,5
Error in line 16: 1Sjqw3lHI A954 18,5
Error in line 19: 1Sjqw3lHI A348 86,7
Error in line 24: A122 A348 15,9
Error in line 33: 1Sjqw3lHI A348 96,1
Error in line 26: JiB0lSdTmJX A954 6,3
Error in line 25: fqRHhG S111 15,9
